Bug 1821219: Update WebGPU.webidl for new automatic pipeline layout. r=webgpu-reviewers,webidl,teoxoy,smaug

Adapt WebGPU.webidl for [gpuweb#2657], which changed the way to request automatic pipeline layout: rather than simply omitting the `layout` property from the pipeline descriptor, you now need to say `layout: "auto"`.

[gpuweb#2657]: https://github.com/gpuweb/gpuweb/pull/2657/files

Differential Revision: https://phabricator.services.mozilla.com/D173495